--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@blockone/eosjs-ios-browser-signature-provider-interface",
-  "version": "3.0.3",
+  "name": "eosjs-ios-browser-signature-provider-interface",
+  "version": "0.1.0",
   "description": "A Signature Provider Interface for communicating with an authenticator from iOS browsers using the EOSIO Authentication Transport Protocol Specification.",
   "author": {
     "name": "block.one",
@@ -45,7 +45,7 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
-    "@blockone/eosjs-signature-provider-interface": "^7.0.0",
+    "eosjs-signature-provider-interface": "^0.1.0",
     "qs": "^6.5.2",
     "uuid": "^3.3.2"
   }
